--- a/index.html
+++ b/index.html
@@ -32,10 +32,12 @@
     <div id="sehr-iftar-times" class="timing">
       <p>Sehri Time: <span id="sehr-time">Loading...</span></p>
       <p>Iftar Time: <span id="iftar-time">Loading...</span></p>
+    <p> "Click once and see the magic!" </p>
     </div>
   </div>
 
 
-  <script src="script.js"></script>
+  <script src="audio.js" defer></script>
+  <script src="countdown.js" defer></script>
 </body>
 </html>
