major updates sehri time and iftar time ow many days rah gay hai

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>Ramadan Countdown 2025</h1>
     <p id="hijri-date">Hijri Date: 1446 AH</p>
     <p id="day-of-week" class="daysofweek">Day of the Week: Loading...</p>
+    &nbsp;	&nbsp;
     <div id="countdown">
       <div class="time-box">
         <span id="days">00</span>
@@ -29,15 +30,17 @@
         <p>Seconds</p>
       </div>
     </div>
+
     <div id="sehr-iftar-times" class="timing">
       <p>Sehri Time: <span id="sehr-time">Loading...</span></p>
       <p>Iftar Time: <span id="iftar-time">Loading...</span></p>
-    <p> "Click once and see the magic!" </p>
+      <p id="first-sehri-info">Loading first Sehri info...</p>
+      <p id="first-iftar-info">Loading first Iftar info...</p>
+      <p> "Click once and see the magic!" </p>
     </div>
   </div>
 
-
-  <script src="audio.js" defer></script>
-  <script src="countdown.js" defer></script>
+  <script src="countdown.js"></script>
+  <script src="audio.js"></script>
 </body>
 </html>
