--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
       <p> "Click once and see the magic!" </p>
     </div>
   </div>
+  </div>
+  
 
   <script src="countdown.js"></script>
   <script src="audio.js"></script>
