offical added and responsive

--- a/index.html
+++ b/index.html
@@ -11,35 +11,35 @@
     <h1>Ramadan Countdown 2025</h1>
     <p id="hijri-date">Hijri Date: 1446 AH</p>
     <p id="day-of-week" class="daysofweek">Day of the Week: Loading...</p>
-    &nbsp;	&nbsp;
+    &nbsp; &nbsp;
     <div id="countdown">
-      <div class="time-box">
-        <span id="days">00</span>
-        <p>Days</p>
-      </div>
-      <div class="time-box">
-        <span id="hours">00</span>
-        <p>Hours</p>
-      </div>
-      <div class="time-box">
-        <span id="minutes">00</span>
-        <p>Minutes</p>
-      </div>
-      <div class="time-box">
-        <span id="seconds">00</span>
-        <p>Seconds</p>
-      </div>
-  
-    <div id="sehr-iftar-times" class="timing">
-      <p>Sehri Time: <span id="sehr-time">Loading...</span></p>
-      <p>Iftar Time: <span id="iftar-time">Loading...</span></p>
-      <p id="first-sehri-info">Loading first Sehri info...</p>
-      <p id="first-iftar-info">Loading first Iftar info...</p>
-      <p> "Click once and see the magic!" </p>
+        <div class="time-box">
+            <span id="days">00</span>
+            <p>Days</p>
+        </div>
+        <div class="time-box">
+            <span id="hours">00</span>
+            <p>Hours</p>
+        </div>
+        <div class="time-box">
+            <span id="minutes">00</span>
+            <p>Minutes</p>
+        </div>
+        <div class="time-box">
+            <span id="seconds">00</span>
+            <p>Seconds</p>
+        </div>
+        <div id="sehr-iftar-times" class="timing">
+            <p>Sehri Time: <span id="sehr-time">Loading...</span></p>
+            <p>Iftar Time: <span id="iftar-time">Loading...</span></p>
+            <p id="first-sehri-info">Loading first Sehri info...</p>
+            <p id="first-iftar-info">Loading first Iftar info...</p>
+            <p> "Click once and see the magic!" </p>
+        </div>
     </div>
-  </div>
-  </div>
-  
+    <div class="powered-by">Powered by Muhammad Hamza Kabeer</div>
+</div>
+
 
   <script src="countdown.js"></script>
   <script src="audio.js"></script>
